--- a/book-forest/src/components/Header.module.css
+++ b/book-forest/src/components/Header.module.css
@@ -1,3 +1,25 @@
+.header {
+  min-width: 1200px;
+}
+
+.container {
+  position: absolute;
+  right: 64px;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+}
+
+.item {
+  padding: 4px 18px;
+  border-radius: 18px;
+  margin-left: 4px;
+}
+.item:hover {
+  background-color: #527160; 
+}
+
 .user {
   position: relative;
   padding: 16px;
