--- a/book-forest/src/components/Header.module.css
+++ b/book-forest/src/components/Header.module.css
@@ -15,6 +15,12 @@
   padding: 4px 18px;
   border-radius: 18px;
   margin-left: 4px;
+  cursor: pointer;
+
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none
 }
 .item:hover {
   background-color: #527160; 
