--- a/book-forest/src/components/Header.module.css
+++ b/book-forest/src/components/Header.module.css
@@ -44,6 +44,8 @@
   border-radius: 8px;
   box-shadow: 1px 1px 3px 1px #c0c0c0;
   background-color: white;
+
+  z-index: 1000;
 }
 .drop > div > * {
   display: block;
